# Simple-Allocator

./: CMakeLists.txt  LICENSE  Readme.md  example.cpp
Allocator/: Allocator.cpp  Allocator.h  FreeSpace.h  IAllocator.h  RefHandle.cpp  RefHandle.h  Strategy.h  Typedefs.h
Utils/: Guid.h
